force-app/main/default/objects/Explore_Plot_Note_Score__c/Explore_Plot_Note_Score__c.object-meta.xml
<CustomObject>
    <label>Explore Plot Note Score</label>
    <nameField>
        <label>Explore Plot Note Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Explore Plot Note Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>