force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Explore_Rating__c.field-meta.xml
<CustomField>
    <fullName>Explore_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explore Rating</label>
    <referenceTo>Explore_Rating__c</referenceTo>
    <relationshipLabel>Explore Plot Note Scores</relationshipLabel>
    <relationshipName>Explore_Plot_Note_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>