force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Harvest_Rows__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Rows__c</fullName>
    <label>Harvest Rows</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>