force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Moisture_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Moisture_Concentration__c</fullName>
    <label>Moisture Concentration</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>