force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Plot_Length__c.field-meta.xml
<CustomField>
    <fullName>Plot_Length__c</fullName>
    <label>Plot Length</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>