force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Plot_Note__c.field-meta.xml
<CustomField>
    <fullName>Plot_Note__c</fullName>
    <label>Plot Note</label>
    <referenceTo>Plot_Saved_Soy__c</referenceTo>
    <relationshipLabel>Explore Plot Note Scores</relationshipLabel>
    <relationshipName>Explore_Plot_Note_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>