force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Plot_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Plot_Weight_lbs__c</fullName>
    <label>Plot Weight (lbs)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>