force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Row_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Row_Spacing__c</fullName>
    <label>Row Spacing</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>