force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Score_Value__c</fullName>
    <label>Score Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>