force-app/main/default/objects/Explore_Plot_Note_Score__c/fields/Yield_bu_ac__c.field-meta.xml
<CustomField>
    <fullName>Yield_bu_ac__c</fullName>
    <label>Yield (bu/ac)</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>