force-app/main/default/objects/Explore_Plot_Note_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Explore_Rating__c</columns>
    <columns>Score_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Plot_Note__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Explore_Rating__c</field>
        <operation>equals</operation>
        <value>Eye Appeal</value>
    </filters>
    <label>All</label>
</ListView>